2003/12/06 niteria
- Implemented Feature 851400: \texttt{} and \textsc{} buttons

2003/12/06 svenwiegand
- Adapted options pages to make them look more comfortable
- Moved text format from customization to options dialog
- Fixed bug 617922: highlight all and copy+paste will crash TXC if last line
  is not empty/highlight all and delete will disable you to type any texts,
  if last line is not empty.
- Enabled support for Windows XP Theming (requires BCGControlBar library 6.2,
  take a look into the new HowToBuild.txt to learn were to download it).

2003/12/04 niteria
- Implemented Feature 852581: TemplateDialogs: Remember last opened tab
- Fixed bug 852582: TemplateDialogs: Tabs are not ordered alphabetically
- Fixed Bug 854326: Miktex 2.4 'only for me' installation not recognized
- Set version info to 1 Beta 6.20

2003/11/15 niteria
- Fixed Bug 842720: Parsing file names with points like "1.1"
   TXC reproduces now exactly the behaviour of TeX
   regarding \input and \include
- Fixed Bug 601207: Tooltip Text of 'Select Window'-Button is missing

2003/09/13 niteria
- Implemented Feature 777489: More User Tools Icons
- Fixed Bug 805454: Single File Compiling fails if project is loaded

2003/08/11 niteria
- Updated the URL for downloading dictionaries.
   Points now to: http://lingucomponent.openoffice.org/download_dictionary.html

2003/07/24 niteria
- Implemented Feature 776912: Parse for even unknown environments

2003/07/18 titoo
- Implemented Feature 567832: Equations in Structure/Object View

2003/07/15 niteria
- Fixed Bug 702814: TXC doesn't save last opened folder after cancelling

2003/06/13 niteria
- Implemented Feature 753658: Scan for Project on Opening a Document
   (Still open question: Ability to switch this off in the options?)
- Implemented Feature 748870: Insert graphics dialogue file type filter too limited
   (Added *.jpg, *.jpeg and *.png)

2003/06/05 niteria
- Implemented Feature 675205: One-Click Project Creation for existing Documents